--- a/json-generated-impl/build.gradle
+++ b/json-generated-impl/build.gradle
@@ -8,7 +8,7 @@ dependencies {
     api 'io.micronaut:micronaut-context'
     api 'io.micronaut:micronaut-http'
     api 'io.micronaut:micronaut-jackson-core'
-    api project(":json-generated-api")
+    api project(":serialization-api")
 
     // compileOnly libs.managed.netty.codec.http
     compileOnly 'io.micronaut:micronaut-management'
