--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ micronautVersion=3.1.0
 micronautTestVersion=2.3.7
 groovyVersion=3.0.8
 spockVersion=2.0-groovy-3.0
-
+javapoetVersion=1.13.0
 title=Micronaut Serialization
 projectDesc=TODO
 projectUrl=https://micronaut.io
@@ -13,5 +13,5 @@ developers=Graeme Rocher
 
 # Micronaut core branch for BOM pull requests
 githubCoreBranch=3.2.x
-bomProperty=micronautXXXVersion
+bomProperty=micronautSerializationVersion
 org.gradle.caching=true
