--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,8 @@ micronautVersion=3.1.3
 micronautTestVersion=2.3.7
 groovyVersion=3.0.9
 spockVersion=2.0-groovy-3.0
+bsonVersion=4.3.3
+
 title=Micronaut Serialization
 projectDesc=TODO
 projectUrl=https://micronaut.io
