add project desc

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ spockVersion=2.0-groovy-3.0
 bsonVersion=4.3.3
 
 title=Micronaut Serialization
-projectDesc=TODO
+projectDesc=Enables serialization/deserialization in Micronaut applications using build time information
 projectUrl=https://micronaut.io
 githubSlug=micronaut-projects/micronaut-serialization
 developers=Graeme Rocher
