Start drafting docs

--- a/src/main/docs/guide/toc.yml
+++ b/src/main/docs/guide/toc.yml
@@ -3,5 +3,8 @@ introduction:
 releaseHistory: Release History
 quickStart:
   title: Quick Start
+  jacksonQuick: Jackson Annotations & Jackson Core
+  jsonpQuick: JSON-B Annotations & JSON-P
+  bsonQuick: BSON Annotations and BSON
 repository: Repository
 
