--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ micronautTestVersion=2.3.7
 groovyVersion=3.0.9
 spockVersion=2.0-groovy-3.0
 bsonVersion=4.3.3
-
+jacksonAnnotationJavadoc=https://fasterxml.github.io/jackson-annotations/javadoc/2.12/com/fasterxml/jackson/annotation
 title=Micronaut Serialization
 projectDesc=Enables serialization/deserialization in Micronaut applications using build time information
 projectUrl=https://micronaut.io
