--- a/doc-examples/example-groovy/build.gradle
+++ b/doc-examples/example-groovy/build.gradle
@@ -22,3 +22,6 @@ dependencies {
 application {
     mainClass.set("example.Application")
 }
+tasks.named("nativeCompile") {
+    it.setEnabled(false)
+}
