--- a/doc-examples/example-groovy/build.gradle
+++ b/doc-examples/example-groovy/build.gradle
@@ -14,10 +14,14 @@ configurations.all {
     }
 }
 dependencies {
-    annotationProcessor(projects.serdeProcessor)
+    compileOnly(projects.serdeProcessor)
+    compileOnly("io.micronaut:micronaut-inject-groovy")
     implementation("io.micronaut:micronaut-http-client")
     runtimeOnly("ch.qos.logback:logback-classic")
 }
 application {
     mainClass.set("example.Application")
+}
+tasks.named("nativeCompile") {
+    it.setEnabled(false)
 }
