--- a/doc-examples/example-groovy/build.gradle
+++ b/doc-examples/example-groovy/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 micronaut {
     runtime("netty")
-    testRuntime("junit5")
+    testRuntime("spock")
 }
 configurations.all {
     resolutionStrategy.dependencySubstitution {
@@ -18,6 +18,8 @@ dependencies {
     compileOnly("io.micronaut:micronaut-inject-groovy")
     implementation("io.micronaut:micronaut-http-client")
     runtimeOnly("ch.qos.logback:logback-classic")
+    testCompileOnly("io.micronaut:micronaut-inject-groovy")
+
 }
 application {
     mainClass.set("example.Application")
