fix disabling of native for groovy

--- a/doc-examples/example-groovy/build.gradle
+++ b/doc-examples/example-groovy/build.gradle
@@ -27,3 +27,8 @@ application {
 tasks.named("nativeCompile") {
     it.setEnabled(false)
 }
+tasks.withType(Test).configureEach {
+    if (it.name == "testNativeImage") {
+        it.enabled = false
+    }
+}
