--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
 projectVersion=1.0.0-SNAPSHOT
+projectGroup=io.micronaut.serde
 micronautDocsVersion=2.0.0
 micronautVersion=3.2.4
 micronautTestVersion=3.0.4
