--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 projectVersion=1.0.0-SNAPSHOT
 projectGroup=io.micronaut.serde
 micronautDocsVersion=2.0.0
-micronautVersion=3.2.4
+micronautVersion=3.2.5-SNAPSHOT
 micronautTestVersion=3.0.4
 groovyVersion=3.0.9
 spockVersion=2.0-groovy-3.0
