--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,4 @@ developers=Graeme Rocher
 githubCoreBranch=3.3.x
 bomProperty=micronautSerializationVersion
 org.gradle.caching=true
+org.gradle.jvmargs=-XX:MaxMetaspaceSize=1g
