--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,14 @@
-projectVersion=1.0.2-SNAPSHOT
+projectVersion=1.1.0-SNAPSHOT
 projectGroup=io.micronaut.serde
 micronautDocsVersion=2.0.0
-micronautVersion=3.3.3
-micronautTestVersion=3.0.5
-groovyVersion=3.0.9
+micronautVersion=3.4.3
+micronautTestVersion=3.1.1
+groovyVersion=3.0.10
 spockVersion=2.0-groovy-3.0
-bsonVersion=4.3.3
+
 jsonbApi=https://jakarta.ee/specifications/jsonb/2.0/apidocs/jakarta/json/bind/annotation
 jacksonAnnotationJavadoc=https://fasterxml.github.io/jackson-annotations/javadoc/2.12/com/fasterxml/jackson/annotation
+
 title=Micronaut Serialization
 projectDesc=Enables serialization/deserialization in Micronaut applications using build time information
 projectUrl=https://micronaut.io
@@ -15,7 +16,9 @@ githubSlug=micronaut-projects/micronaut-serialization
 developers=Graeme Rocher
 
 # Micronaut core branch for BOM pull requests
-githubCoreBranch=3.4.x
+githubCoreBranch=3.5.x
+
 bomProperty=micronautSerializationVersion
+
 org.gradle.caching=true
-org.gradle.jvmargs=-XX:MaxMetaspaceSize=1g
+org.gradle.jvmargs=-Xmx1g -XX:MaxMetaspaceSize=1g
