--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,7 +8,7 @@ oracle-jdbc-driver = "21.6.0.0.1"
 
 [libraries]
 managed-bson = { module = "org.mongodb:bson", version.ref = "managed-bson" }
-managed-glassfish-jakarta-json = { module = "org.glassfish:jakarta.json", version.ref = "managed.glassfish.jakarta.json" }
+managed-glassfish-jakarta-json = { module = "org.glassfish:jakarta.json", version.ref = "managed-glassfish-jakarta-json" }
 
 managed-jakarta-json-api = { module = "jakarta.json:jakarta.json-api", version.ref = "managed-jakarta-json-api" }
 managed-jakarta-json-bindApi = { module = "jakarta.json.bind:jakarta.json.bind-api", version.ref = "managed-jakarta-json-bindApi" }
