--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
-projectVersion=1.2.1-SNAPSHOT
+projectVersion=2.0.0-SNAPSHOT
 projectGroup=io.micronaut.serde
 micronautDocsVersion=2.0.0
-micronautVersion=3.5.3
+micronautVersion=4.0.0-SNAPSHOT
 micronautTestVersion=3.0.5
 groovyVersion=3.0.9
 spockVersion=2.0-groovy-3.0
@@ -14,7 +14,7 @@ githubSlug=micronaut-projects/micronaut-serialization
 developers=Graeme Rocher
 
 # Micronaut core branch for BOM pull requests
-githubCoreBranch=3.6.x
+githubCoreBranch=4.0.x
 bomProperty=micronautSerializationVersion
 org.gradle.caching=true
 org.gradle.jvmargs=-XX:MaxMetaspaceSize=1g
