--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,14 @@
-projectVersion=1.3.1-SNAPSHOT
+projectVersion=2.0.0-SNAPSHOT
 projectGroup=io.micronaut.serde
 micronautDocsVersion=2.0.0
-micronautVersion=3.5.3
-micronautTestVersion=3.0.5
-groovyVersion=3.0.9
-spockVersion=2.0-groovy-3.0
+micronautVersion=4.0.0-SNAPSHOT
+micronautTestVersion=3.4.0
+groovyVersion=3.0.12
+spockVersion=2.1-groovy-3.0
+
 jsonbApi=https://jakarta.ee/specifications/jsonb/2.0/apidocs/jakarta/json/bind/annotation
 jacksonAnnotationJavadoc=https://fasterxml.github.io/jackson-annotations/javadoc/2.12/com/fasterxml/jackson/annotation
+
 title=Micronaut Serialization
 projectDesc=Enables serialization/deserialization in Micronaut applications using build time information
 projectUrl=https://micronaut.io
@@ -14,7 +16,7 @@ githubSlug=micronaut-projects/micronaut-serialization
 developers=Graeme Rocher
 
 # Micronaut core branch for BOM pull requests
-githubCoreBranch=3.6.x
+githubCoreBranch=4.0.x
 bomProperty=micronautSerializationVersion
 org.gradle.caching=true
 org.gradle.jvmargs=-XX:MaxMetaspaceSize=1g
