--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,13 +3,15 @@ managed-bson = "4.7.1"
 managed-jakarta-json-api = "2.0.1"
 managed-jakarta-json-bindApi = "2.0.0"
 managed-glassfish-jakarta-json = "2.0.1"
-
+managed-google-cloudevent-types="0.3.0"
 oracle-jdbc-driver = "21.6.0.0.1"
 jetbrains-annotations = "23.0.0"
 
 [libraries]
 managed-bson = { module = "org.mongodb:bson", version.ref = "managed-bson" }
 managed-glassfish-jakarta-json = { module = "org.glassfish:jakarta.json", version.ref = "managed-glassfish-jakarta-json" }
+
+managed-google-cloudevent-types = { module = "com.google.cloud:google-cloudevent-types", version.ref = "managed-google-cloudevent-types" }
 
 managed-jakarta-json-api = { module = "jakarta.json:jakarta.json-api", version.ref = "managed-jakarta-json-api" }
 managed-jakarta-json-bindApi = { module = "jakarta.json.bind:jakarta.json.bind-api", version.ref = "managed-jakarta-json-bindApi" }
