--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,11 +7,14 @@ micronaut-test = "3.7.0"
 groovy = "4.0.5"
 spock = "2.2-groovy-4.0"
 kotlin = '1.7.21'
+graal-svm = "22.0.0.2"
 
 managed-bson = "4.8.0"
 managed-jakarta-json-api = "2.1.1"
 managed-jakarta-json-bindApi = "3.0.0"
 managed-eclipse-parsson = "1.1.1"
+
+micronaut-reactor = "3.0.0-SNAPSHOT"
 
 oracle-jdbc-driver = "21.6.0.0.1"
 jetbrains-annotations = "23.0.0"
@@ -20,11 +23,15 @@ jetbrains-annotations = "23.0.0"
 managed-bson = { module = "org.mongodb:bson", version.ref = "managed-bson" }
 managed-eclipse-parsson = { module = "org.eclipse.parsson:parsson", version.ref = "managed-eclipse-parsson" }
 
+micronaut-reactor = { module = "io.micronaut.reactor:micronaut-reactor-bom", version.ref = "micronaut-reactor" }
+
 managed-jakarta-json-api = { module = "jakarta.json:jakarta.json-api", version.ref = "managed-jakarta-json-api" }
 managed-jakarta-json-bindApi = { module = "jakarta.json.bind:jakarta.json.bind-api", version.ref = "managed-jakarta-json-bindApi" }
 
 oracle-jdbc-driver = { module = "com.oracle.database.jdbc:ojdbc8", version.ref = "oracle-jdbc-driver" }
 jetbrains-annotations = { module = "org.jetbrains:annotations", version.ref = "jetbrains-annotations" }
+
+graal-svm = { module = "org.graalvm.nativeimage:svm", version.ref = "graal-svm" }
 
 #PLUGINS
 
