--- a/gradle.properties
+++ b/gradle.properties
@@ -15,4 +15,5 @@ githubCoreBranch=4.0.x
 
 bomProperty=micronautSerializationVersion
 org.gradle.caching=true
+org.gradle.parallel=true
 org.gradle.jvmargs=-XX:MaxMetaspaceSize=1g
