--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
-micronaut = "4.0.0-SNAPSHOT"
+micronaut = "4.0.0-M1"
 micronaut-docs = "2.0.0"
-micronaut-gradle-plugin = "3.7.5"
+micronaut-gradle-plugin = "4.0.0-SNAPSHOT"
 micronaut-test = "3.7.0"
 micronaut-discovery = "4.0.0-SNAPSHOT"
 groovy = "4.0.5"
