--- a/buildSrc/src/main/groovy/io.micronaut.build.internal.serde-base.gradle
+++ b/buildSrc/src/main/groovy/io.micronaut.build.internal.serde-base.gradle
@@ -2,3 +2,18 @@ repositories {
     mavenCentral()
     maven { setUrl("https://s01.oss.sonatype.org/content/repositories/snapshots/") }
 }
+
+configurations {
+    all {
+        resolutionStrategy {
+            eachDependency { details ->
+                if (details.requested.module.name.startsWith("micronaut-bom")) {
+                    return
+                }
+                if (details.requested.group == "io.micronaut") {
+                    details.useVersion("4.0.0-M1")
+                }
+            }
+        }
+    }
+}
