--- a/benchmarks/build.gradle
+++ b/benchmarks/build.gradle
@@ -26,6 +26,10 @@ jmh {
     duplicateClassesStrategy = DuplicatesStrategy.EXCLUDE
 }
 
+shadowJar {
+    mergeServiceFiles()
+}
+
 configurations {
     configureEach {
         resolutionStrategy {
