More performance optimizations

--- a/buildSrc/src/main/groovy/io.micronaut.build.internal.serde-module.gradle
+++ b/buildSrc/src/main/groovy/io.micronaut.build.internal.serde-module.gradle
@@ -2,3 +2,10 @@ plugins {
     id("io.micronaut.build.internal.serde-base")
     id("io.micronaut.build.internal.module")
 }
+
+micronautBuild {
+    binaryCompatibility {
+        // Enable before Micronaut 4 release
+        enabled.set(false)
+    }
+}
