--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,11 @@
 [versions]
-micronaut = "4.0.0-M1"
+micronaut = "4.0.0-M2"
 micronaut-docs = "2.0.0"
-micronaut-gradle-plugin = "4.0.0-SNAPSHOT"
-micronaut-test = "3.7.0"
-micronaut-discovery = "4.0.0-SNAPSHOT"
-groovy = "4.0.5"
-spock = "2.2-groovy-4.0"
+micronaut-gradle-plugin = "4.0.0-M1"
+micronaut-test = "4.0.0-M1"
+micronaut-discovery = "4.0.0-M1"
+groovy = "4.0.11"
+spock = "2.3-groovy-4.0"
 kotlin = '1.8.20'
 graal-svm = "22.3.2"
 aws-lambda-events = '3.11.1'
