Update test and reactor

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,8 +2,9 @@
 micronaut = "4.0.0-M2"
 micronaut-docs = "2.0.0"
 micronaut-gradle-plugin = "4.0.0-M1"
-micronaut-test = "4.0.0-M1"
+micronaut-test = "4.0.0-M2"
 micronaut-discovery = "4.0.0-M1"
+
 groovy = "4.0.11"
 spock = "2.3-groovy-4.0"
 kotlin = '1.8.20'
@@ -17,7 +18,7 @@ managed-jakarta-json-api = "2.1.1"
 managed-jakarta-json-bindApi = "3.0.0"
 managed-eclipse-parsson = "1.1.1"
 
-micronaut-reactor = "3.0.0-SNAPSHOT"
+micronaut-reactor = "3.0.0-M1"
 
 oracle-jdbc-driver = "23.2.0.0"
 jetbrains-annotations = "24.0.1"
