--- a/doc-examples/example-groovy/build.gradle
+++ b/doc-examples/example-groovy/build.gradle
@@ -12,7 +12,8 @@ dependencies {
     compileOnly(mn.micronaut.inject.groovy)
     implementation(projects.micronautSerdeJackson)
     implementation(mn.micronaut.http.client)
-    runtimeOnly(mn.logback.classic)
+    runtimeOnly(mnLogging.logback.classic)
+
     testCompileOnly(mn.micronaut.inject.groovy)
 
 }
