--- a/buildSrc/src/main/groovy/io.micronaut.build.internal.serde-examples.gradle
+++ b/buildSrc/src/main/groovy/io.micronaut.build.internal.serde-examples.gradle
@@ -1,6 +1,6 @@
 plugins {
     id("io.micronaut.build.internal.serde-base")
-    id("io.micronaut.application")
+    id("io.micronaut.minimal.application")
 }
 
 configurations.all {
