Enable binary compatibility check

--- a/buildSrc/src/main/groovy/io.micronaut.build.internal.serde-module.gradle
+++ b/buildSrc/src/main/groovy/io.micronaut.build.internal.serde-module.gradle
@@ -5,7 +5,7 @@ plugins {
 
 micronautBuild {
     binaryCompatibility {
-        // Enable before Micronaut 4 release
-        enabled.set(false)
+        enabled.set(true)
+        baselineVersion = "2.0.0-M12"
     }
 }
