Enable binary compatibility check (#504)
* Build plugin to 6.5.3

* Enable binary compatibility check

* Remove baselineVersion (not needed)

--- a/buildSrc/src/main/groovy/io.micronaut.build.internal.serde-module.gradle
+++ b/buildSrc/src/main/groovy/io.micronaut.build.internal.serde-module.gradle
@@ -5,7 +5,6 @@ plugins {
 
 micronautBuild {
     binaryCompatibility {
-        // Enable before Micronaut 4 release
-        enabled.set(false)
+        enabled.set(true)
     }
 }
