--- a/buildSrc/src/main/groovy/io.micronaut.build.internal.serde-module.gradle
+++ b/buildSrc/src/main/groovy/io.micronaut.build.internal.serde-module.gradle
@@ -2,9 +2,8 @@ plugins {
     id("io.micronaut.build.internal.serde-base")
     id("io.micronaut.build.internal.module")
 }
-
 micronautBuild {
     binaryCompatibility {
-        enabled.set(true)
+        baselineVersion = "2.0.0-M12"
     }
 }
