--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
-micronaut = "4.0.1"
-micronaut-platform = "4.0.0-RC1"
+micronaut = "4.1.0"
+micronaut-platform = "4.0.0"
 micronaut-docs = "2.0.0"
 micronaut-gradle-plugin = "4.0.1"
 micronaut-test = "4.0.0"
