--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-micronaut = "4.1.2"
+micronaut = "4.1.3-SNAPSHOT"
 micronaut-platform = "4.0.0"
 micronaut-docs = "2.0.0"
 micronaut-gradle-plugin = "4.0.2"
@@ -12,6 +12,7 @@ spock = "2.3-groovy-4.0"
 kotlin = '1.9.10'
 graal-svm = "23.0.1"
 aws-lambda-events = '3.11.2'
+oci-sdk = '3.15.0'
 aws-lambda-serialization = '1.1.2'
 microstream-storage-restclient = '08.01.01-MS-GA'
 
@@ -50,6 +51,8 @@ junit-jupiter-api = { module = 'org.junit.jupiter:junit-jupiter-api' }
 
 jmh-core = { module = "org.openjdk.jmh:jmh-core", version.ref = "jmh" }
 jmh-generator-annprocess = { module = "org.openjdk.jmh:jmh-generator-annprocess", version.ref = "jmh" }
+
+oci-aidocument = { module = "com.oracle.oci.sdk:oci-java-sdk-aidocument", version.ref = "oci-sdk"}
 
 #PLUGINS
 
