--- a/.github/workflows/graalvm-latest.yml
+++ b/.github/workflows/graalvm-latest.yml
@@ -36,7 +36,8 @@ jobs:
       max-parallel: 6
       matrix:
         java: ['17', '21']
-        include: ${{ fromJson(needs.build_matrix.outputs.matrix) }}
+        tasks:
+          - ${{ fromJson(needs.build_matrix.outputs.matrix) }}
     env:
       GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.GRADLE_ENTERPRISE_ACCESS_KEY }}
       GRADLE_ENTERPRISE_CACHE_USERNAME: ${{ secrets.GRADLE_ENTERPRISE_CACHE_USERNAME }}
@@ -57,7 +58,7 @@ jobs:
           GH_USERNAME: ${{ secrets.GH_USERNAME }}
           GRAALVM_QUICK_BUILD: true
         with:
-          nativeTestTask: ${{ matrix.native_test_task }}
+          nativeTestTask: ${{ matrix.tasks.native_test_task }}
       - name: Post-Build Steps
         uses: micronaut-projects/github-actions/graalvm/post-build@master
         id: post-build
