--- a/.github/workflows/graalvm-latest.yml
+++ b/.github/workflows/graalvm-latest.yml
@@ -43,6 +43,8 @@ jobs:
       GRADLE_ENTERPRISE_CACHE_USERNAME: ${{ secrets.GRADLE_ENTERPRISE_CACHE_USERNAME }}
       GRADLE_ENTERPRISE_CACHE_PASSWORD: ${{ secrets.GRADLE_ENTERPRISE_CACHE_PASSWORD }}
     steps:
+      - name: Debug the matrix
+        run: echo ${{ toJson(matrix) }}
       - uses: actions/checkout@v4
       - name: Pre-Build Steps
         uses: micronaut-projects/github-actions/graalvm/pre-build@master
@@ -58,7 +60,7 @@ jobs:
           GH_USERNAME: ${{ secrets.GH_USERNAME }}
           GRAALVM_QUICK_BUILD: true
         with:
-          nativeTestTask: ${{ matrix.tasks.native_test_task }}
+          nativeTestTask: ${{ matrix.native_test_task }}
       - name: Post-Build Steps
         uses: micronaut-projects/github-actions/graalvm/post-build@master
         id: post-build
