--- a/.github/workflows/graalvm-latest.yml
+++ b/.github/workflows/graalvm-latest.yml
@@ -36,15 +36,14 @@ jobs:
       max-parallel: 6
       matrix:
         java: ['17', '21']
-        tasks:
-          - ${{ fromJson(needs.build_matrix.outputs.matrix) }}
+        tasks: ${{ fromJson(needs.build_matrix.outputs.matrix).native_test_task }}
     env:
       GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.GRADLE_ENTERPRISE_ACCESS_KEY }}
       GRADLE_ENTERPRISE_CACHE_USERNAME: ${{ secrets.GRADLE_ENTERPRISE_CACHE_USERNAME }}
       GRADLE_ENTERPRISE_CACHE_PASSWORD: ${{ secrets.GRADLE_ENTERPRISE_CACHE_PASSWORD }}
     steps:
       - name: Debug the matrix
-        run: echo ${{ toJson(matrix) }}
+        run: echo "${{ toJson(matrix) }}"
       - uses: actions/checkout@v4
       - name: Pre-Build Steps
         uses: micronaut-projects/github-actions/graalvm/pre-build@master
@@ -60,7 +59,7 @@ jobs:
           GH_USERNAME: ${{ secrets.GH_USERNAME }}
           GRAALVM_QUICK_BUILD: true
         with:
-          nativeTestTask: ${{ matrix.native_test_task }}
+          nativeTestTask: ${{ matrix.tasks }}
       - name: Post-Build Steps
         uses: micronaut-projects/github-actions/graalvm/post-build@master
         id: post-build
