--- a/doc-examples/example-groovy/build.gradle
+++ b/doc-examples/example-groovy/build.gradle
@@ -10,13 +10,17 @@ micronaut {
 dependencies {
     compileOnly(projects.micronautSerdeProcessor)
     compileOnly(mn.micronaut.inject.groovy)
+
     implementation(projects.micronautSerdeJackson)
     implementation(mn.micronaut.http.client)
+
     runtimeOnly(mnLogging.logback.classic)
 
     testCompileOnly(mn.micronaut.inject.groovy)
 
+    testImplementation(mnTest.micronaut.test.spock)
 }
+
 application {
     mainClass.set("example.Application")
 }
