Remove deprecated code for Micronaut Framework 5 and document breaking changes.

--- a/src/main/docs/guide/toc.yml
+++ b/src/main/docs/guide/toc.yml
@@ -15,5 +15,6 @@ bsonAnnotations: BSON Annotations
 serdes: Custom Serializers & Deserializers
 serdeImport: Enabling Serialization of External Classes
 keys: Custom Key Converters
+breaks: Breaking Changes
 repository: Repository
 
